@@ -1,0 +1,6 @@
+\setlength{\oddsidemargin}{1.35cm} %margins set up for psglg1
+\setlength{\evensidemargin}{-0.1cm}
+\setlength{\topmargin}{0cm}
+\setlength{\textwidth}{14.55cm}
+\setlength{\textheight}{22.3cm}
+
