@@ -1,0 +1,4 @@
+\usepackage{fancyhdr}
+\usepackage{babel}
+\usepackage{a4}
+\usepackage{epsfig}
