@@ -1,0 +1,14 @@
+\newcommand{\dir}{dg}
+
+\pagestyle{myheadings}
+\markright{GLIMMER code design overview}
+
+\begin{document}
+\title{GLIMMER --- Developer's Guide}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
+\maketitle
+\tableofcontents
+\newpage
+
+\input{\dir/dg.tex}
+\end{document}
