@@ -1,25 +1,3 @@
-\documentclass[11pt]{article}
-\textheight 10in
-\topmargin -0.5in
-\textwidth 6.5in
-\oddsidemargin -0.2in
-\parindent=0.3in
-
-\usepackage{epsfig}
-% Defines paragraphs
-\setlength{\parskip}{\bigskipamount}
-\setlength{\parindent}{0em}
-
-\pagestyle{myheadings}
-\markright{GLIMMER code design overview}
-
-\begin{document}
-
-\title{GLIMMER code overview}
-\date{April 2004}
-\author{Ian Rutt}
-\maketitle
-
 \section{Introduction}
 
 The `design' of GLIMMER is a consequence of the way it has been
@@ -53,12 +31,10 @@ this would obviously be a big job. The situation is summarised in figure
 
 \begin{figure}
 \centering
-\epsfig{figure=class_diagram.eps,width=\textwidth}
+\epsfig{figure=\dir/figures/class_diagram.eps,width=\textwidth}
 \caption{Main `Class Diagram' for GLIMMER. The relationship between the top-level
   \texttt{glimmer\_params} type and its component types is shown. The
   components of the \texttt{glimmer\_global\_type} type are formed from the
   modules of the original ice model.}
 \label{main_class_diagram}
 \end{figure}
-
-\end{document}
