@@ -1,0 +1,5 @@
+\documentclass[12pt,english,a4paper]{article}
+\input{common/packages.tex}
+\input{common/definitions.tex}
+
+\input{dg.tex}
