@@ -1,0 +1,17 @@
+\begin{document}
+
+\frontmatter
+\title{GLIMMER Documentation}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
+\maketitle
+\tableofcontents
+
+\mainmatter
+\chapter{User Guide}
+\newcommand{\dir}{ug}
+\input{\dir/ug.tex}
+
+\chapter{Developer Guide}
+\renewcommand{\dir}{dg}
+\input{\dir/dg.tex}
+\end{document}
