@@ -1,0 +1,9 @@
+\documentclass[12pt,english,a4paper]{book}
+\input{common/packages.tex}
+\usepackage{color}
+\usepackage[colorlinks=true,citecolor=blue,dvipdfm]{hyperref}
+\input{common/definitions.tex}
+\special{pdf: docinfo << /Author (Magnus Hagdorn and Ian Rutt) /Title (GLIMMER Documentation) >>}
+
+
+\input{glimmer.tex}
