@@ -1,0 +1,5 @@
+\documentclass[12pt,english,a4paper]{book}
+\input{common/packages.tex}
+\input{common/definitions.tex}
+
+\input{glimmer.tex}
