@@ -1,0 +1,14 @@
+\newcommand{\dir}{ug}
+
+\pagestyle{myheadings}
+\markright{GLIMMER 0.6 user documentation}
+
+\begin{document}
+\title{GLIMMER 0.6 User Documentation}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
+\maketitle
+\tableofcontents
+\newpage
+
+\input{\dir/ug.tex}
+\end{document}
