@@ -1,25 +1,3 @@
-\documentclass[11pt]{article}
-\textheight 10in
-\topmargin -0.5in
-\textwidth 6.5in
-\oddsidemargin -0.2in
-\parindent=0.3in
-
-% Defines paragraphs
-\setlength{\parskip}{\bigskipamount}
-\setlength{\parindent}{0em}
-
-\bibstyle{danny}
-\pagestyle{myheadings}
-\markright{GLIMMER 0.6 user documentation}
-
-\begin{document}
-
-\title{GLIMMER 0.6 user documentation}
-\date{March 2004}
-\author{Ian Rutt}
-\maketitle
-
 \section{Introduction}
 
 \subsection{What is GLIMMER?}
@@ -1187,5 +1165,3 @@ use \\
 read \\
 \end{tabular}
 \end{center}
-
-\end{document}
